<resources>
    <string name="app_name">Workout Side</string>
    <string name="app_slogan">From inside to workout side</string>
    <string name="facebook_app_id">1047191685312128</string>
    <string name="action_bar_title">WORKOUT SIDE</string>

    <!-- ACTIVITIES NAME -->
    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="title_activity_training">TrainingActivity</string>
    <string name="title_activity_events">EventsActivity</string>

    <string name="username">Pseudo</string>
    <string name="email">Email</string>
    <string name="password">Mot de passe</string>
    <string name="login">Connexion</string>
    <string name="subscribe">Inscription</string>
    <string name="create_account">Créer mon compte</string>

    <string name="title_activity_new_mouvement">Nouveau mouvement</string>
    <string name="title_activity_list_mouvement">ListMouvementActivity</string>
    <string name="title_activity_new_catalogue">Nouveau catalog de mouvements</string>


    <!-- MAIN -->
    <string name="around_me">Autour de moi...</string>
    <string name="next">Suivant</string>

    <string name="menu_events">événements</string>
    <string name="menu_training">Entraînement</string>
    <string name="menu_profile">Mon compte</string>
    <string name="menu_logout">Déconnexion</string>
    <string name="logout_alert">Etes-vous sûr de vouloir quitter l\'application ?</string>
    <string name="cancel">Annuler</string>
    <string name="leave">Quitter</string>
    <string name="level_0">Débutant</string>
    <string name="level_1">Intermédiaire</string>
    <string name="level_2">Avancé</string>
    <string name="level_3">Expert</string>
    <string name="finish">Terminer</string>

    <!-- Errors -->
    <string name="invalid_email">L\'email est invalide.</string>
    <string name="invalid_password">Le mot de passe est invalide.</string>
    <string name="email_already_used">L\'email est déjà utilisé.</string>
    <string name="invalid_id">Les identifiants sont incorrects.</string>
    <string name="network_error">Pas de connexion internet</string>

    <!-- ACCOUNT -->
    <string name="who_are_you">Qui êtes-vous ?</string>
    <string name="what_is_your_level">Quel est votre niveau ?</string>
    <string name="account_firstname">Prénom</string>
    <string name="account_lastname">Nom</string>
    <string name="account_city">Ville</string>
    <string name="account_birthdate">Date de naissance</string>
    <string name="account_birthdate_hint">jj/mm/aaaa</string>
    <string name="account_gender">Sexe</string>
    <string name="account_gender_m">M</string>
    <string name="account_gender_f">F</string>
    <string name="account_update">Mettre à jour</string>
    <string name="select_birthdate">Sélectionnez votre date de naissance</string>
    <string name="hello_blank_fragment">Blank fragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_event">+</string>
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="new_event_name">Titre de l\'événement</string>
    <string name="new_event_date">Date</string>
    <string name="new_event_description">Description</string>
    <string name="new_event_map_info">Sélectionnez le lieu de l\'événement</string>
    <string name="new_event_location">Adresse de l\'événement</string>
    <string name="level_prompt">Niveau minimum requis</string>
    <string name="new_event_title">Nouvel événement</string>
    <string name="menu_settings">Profil</string>
    <string name="new_event_submit">Ajouter</string>
    <string name="new_event_time_start">Heure début</string>
    <string name="new_event_time_end">Heure fin</string>
    <string name="select_event_hour">Horaire de l\'événement</string>
    <string name="select_event_date">Date de l\'événement</string>
    <string name="event_detail_creator">Organisatrice / Organisateur</string>
    <string name="event_detail_name">Event name</string>
    <string name="event_detail_min_level">Niveau minimum</string>
    <string name="event_detail_datetime">Date et heure</string>
    <string name="event_detail_location">Lieu</string>
    <string name="event_detail_no_description">Pas de description</string>
    <string name="event_detail_button_participate">Je participe</string>
    <string name="event_detail_button_desistate">Annuler ma participation</string>
    <string name="event_detail_nb_participants">Nombre de participants</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_my_events">MyEventsActivity</string>
    <string name="title_activity_my_event">MyEventActivity</string>
    <string name="menu_my_events">Mes événements</string>
    <string name="events_coming">à venir...</string>
    <string name="action_delete">Supprimer</string>
    <string name="action_share">Partager</string>
    <string name="action_edit">Editer</string>
    <string name="delete">Suppression</string>
    <string name="delete_event_alert">Êtes-vous sûr de vouloir supprimer cet événement ?</string>
    <string name="delete_event_success">L\'événement a bien été supprimé</string>
    <string name="missing_fields_warning">Veuillez remplir tous les champs</string>
    <string name="cannot_cancel_participation">Vous ne pouvez pas annuler votre participation à cet événement car vous en êtes le créateur</string>
    <string name="event_update">Mettre à jour</string>
    <string name="event_create">Ajouter</string>
    <string name="event_update_success">L\'événement a bien été mis à jour</string>
    <string name="my_events_activity_title">Mes événements</string>
    <string name="event_detail_button_full">Complet</string>
    <string name="user_does_not_exists">Utilisateur inconnu</string>
    <string name="participating_label_true">Inscrit</string>
    <string name="reset_password">Mot de passe oublié ?</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="change_password_info">Saisissez l\'email que vous avez utilisé pour vous inscrire.</string>
    <string name="change_password_button">Réinitialiser</string>
    <string name="change_password_title">Mot de passe perdu</string>
    <string name="account_password">Nouveau\nmot de passe</string>
    <string name="change_password_success">Un e-mail permettant de réinitialiser votre mot de passe vous a été envoyé</string>
    <string name="change_password_email_not_put">Veuillez saisir une adresse e-mail</string>
    <string name="change_password_error">Une erreur est survenue. Veuillez vérifier les données saisies.</string>
</resources>
