<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:padding="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tab_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tab_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:text="@string/subscribe"
                android:textAllCaps="true"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/gray" />

        </LinearLayout>


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/email"
            android:descendantFocusability="beforeDescendants"
            android:focusableInTouchMode="true"
            android:singleLine="true" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/login_buttons_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/login_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/primary"
                    android:text="@string/login"
                    android:textColor="@color/white" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="10dp"
                        android:text="ou"
                        android:textAllCaps="true"
                        android:textAppearance="@android:style/TextAppearance.Small" />

                </RelativeLayout>


                <com.facebook.login.widget.LoginButton
                    android:id="@+id/fb_login_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal|center_vertical"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/account_buttons_panel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <Button
                    android:id="@+id/create_button"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/primary"
                    android:text="@string/create_account"
                    android:textColor="@color/white" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>

