<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/step_1_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_is_your_level"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/secondary" />


        <RelativeLayout
            android:id="@+id/account_level_0_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/gray_light">

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/level_0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/level_0"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/check_level_0"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/check"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_level_1_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light">

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/level_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/level_1"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/check_level_1"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/check"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_level_2_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light">

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/level_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/level_2"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/check_level_2"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/check"
                android:visibility="gone" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/account_level_3_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/gray_light">

            <RelativeLayout
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@color/level_3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/level_3"
                android:textSize="8pt" />

            <ImageView
                android:id="@+id/check_level_3"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:src="@mipmap/check"
                android:visibility="gone" />
        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/account_finish_button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:background="@color/primary"
                android:text="@string/finish"
                android:textColor="@color/white" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>

    </LinearLayout>

</ScrollView>

